<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Yuk Menghafal</string>
    <string name="action_settings">Settings</string>
    <string name="tentang">YukMenghafal! adalah aplikasi yang dapat membantu pengguna untuk menghafalkan ayat-ayat Al-Quran dibantu dengan ilustrasi tiap ayat.</string>
    <string name="developer">\n Developer: \n Abddullah Izzuddiin A. \n M. Rahadian Yusuf. \n Umroh S.</string>
    <string name="totalHafalan">Total \n hafalan:</string>
    <string name="sedangDihafal">Sedang \n dihafal:</string>
    <string name="hafalanTerakhir">Hafalan \n terakhir:</string>
    <string name="jumlahdihafal">26 surat dihafal \n dari 36 surat</string>
    <string name="hafalankarang">An-najmu \n Ayat 17</string>
    <string name="hafalanakhir">Al-Qomar</string>
    <string name="bookmark">Bookmark</string>
    <string name="selesai">Sudah dihafal</string>
    <string name="share">Bagikan</string>
    
    
    <string name="title_activity_view_registrasi">ViewRegistrasi</string>
    <string name="title_activity_view_daftar_surat">ViewDaftarSurat</string>
    <string name="title_activity_view_daftar_ayat">ViewDaftarAyat</string>
    <string name="title_activity_view_ayat">ViewAyat</string>
   
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
</resources>
